# lossless-cc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  MEMORY.md  PLAN.md  PRD.md
src/lossless_cc/: __init__.py  cli.py  db.py  ingest.py  summarizer.py
tests/: test_db.py  test_ingest.py
tests/fixtures/: sample.jsonl
