[project]
name = "lossless-cc"
version = "0.1.0"
description = "Lossless context management for Claude Code. Never lose conversation history again."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vamsi Krishna Teegavarapu" }
]
keywords = ["claude", "claude-code", "context", "memory", "ai-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
]

[project.scripts]
lossless-cc = "lossless_cc.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lossless_cc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
